PROJECT(VisItSAMRAIReader)

SET(SERVER_SOURCES
vtkVisItSAMRAIReader.h
vtkVisItSAMRAIReader.cxx
)

SET(EXTRA_SOURCES
avtSAMRAIFileFormat.C
avtSAMRAIFileFormat.h
AutoArray.h
SAMRAIEnginePluginInfo.C
SAMRAIPluginInfo.C
SAMRAIPluginInfo.h
SAMRAICommonPluginInfo.C
SAMRAIMDServerPluginInfo.C
)

INCLUDE_DIRECTORIES(
${CMAKE_CURRENT_BINARY_DIR}
${CMAKE_CURRENT_SOURCE_DIR}
${AVTALGORITHMS_BINARY_DIR}
${AVTALGORITHMS_SOURCE_DIR}
${VISIT_COMMON_INCLUDES}
${VISIT_SOURCE_DIR}/include
${AVT_DATABASE_SOURCE_DIR}/Database
${AVT_DATABASE_SOURCE_DIR}/Ghost
${AVT_DATABASE_SOURCE_DIR}/Formats
${AVT_DBATTS_SOURCE_DIR}/MetaData
${AVT_DBATTS_SOURCE_DIR}/SIL
${VISIT_SOURCE_DIR}/avt/Math
${VISIT_SOURCE_DIR}/avt/VisWindow/VisWindow
${AVT_PIPELINE_SOURCE_DIR}/AbstractFilters
${AVT_PIPELINE_SOURCE_DIR}/Data
${AVT_PIPELINE_SOURCE_DIR}/Pipeline
${AVT_PIPELINE_SOURCE_DIR}/Sinks
${AVT_PIPELINE_SOURCE_DIR}/Sources
${VTK_INCLUDE_DIRS}
)

ADD_PARAVIEW_PLUGIN(VisItSAMRAIReader "1.0"
  SERVER_MANAGER_SOURCES ${SERVER_SOURCES}
  SERVER_SOURCES ${EXTRA_SOURCES}
  SERVER_MANAGER_XML VisItSAMRAIReader.xml
  GUI_RESOURCE_FILES VisItSAMRAIReaderGUI.xml)

TARGET_LINK_LIBRARIES(VisItSAMRAIReader ${PARAVIEW_HDF5_LIBRARIES} AVTAlgorithms)
