PROJECT(VisItSAMRAIReader)

SET(SOURCES
avtSAMRAIFileFormat.C
avtSAMRAIFileFormat.h
AutoArray.h
SAMRAIEnginePluginInfo.C
SAMRAIPluginInfo.C
SAMRAIPluginInfo.h
SAMRAICommonPluginInfo.C
SAMRAIMDServerPluginInfo.C
)

ADD_VISIT_STMDREADER(VisItSAMRAIReader "1.0"  
  VISIT_READER_NAME "avtSAMRAIFileFormat"  
  VISIT_READER_FILE_PATTERN "samrai"
  SERVER_SOURCES ${SOURCES}
  )

TARGET_LINK_LIBRARIES(VisItSAMRAIReader ${PARAVIEW_HDF5_LIBRARIES} AVTAlgorithms)
